--- a/code.html
+++ b/code.html
@@ -3,64 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matrix Code Rain</title>
+    <title>Booting...</title>
     <style>
         body {
-            margin: 0;
-            overflow: hidden;
             background-color: black;
+            color: #00ff00;
+            font-family: monospace;
+            font-size: 16px;
+            padding: 20px;
         }
-        canvas {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+        #terminal {
+            white-space: pre-wrap;
+            overflow: hidden;
+            height: 100vh;
         }
     </style>
 </head>
 <body>
-    <canvas id="matrixCanvas"></canvas>
+    <div id="terminal"></div>
 
     <script>
-        const canvas = document.getElementById("matrixCanvas");
-        const ctx = canvas.getContext("2d");
+        const bootLines = [
+            "[System Booting...]",
+            "Loading Kernel...",
+            "Checking System Integrity...",
+            "Initializing Secure Modules...",
+            "Loading GUI Interface...",
+            "Applying User Configurations...",
+            "Establishing Network Connection...",
+            "Starting System Services...",
+            "Accessing Secure Mode...",
+            "Complete. Press ENTER to continue."
+        ];
 
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-
-        const fontSize = 16;
-        const columns = canvas.width / fontSize;
-        const drops = [];
-
-        for (let x = 0; x < columns; x++) {
-            drops[x] = 1;
-        }
-
-        function drawMatrix() {
-            ctx.fillStyle = "rgba(0, 0, 0, 0.1)";
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-            ctx.fillStyle = "#0F0"; // Yeşil renk (Matrix tarzı)
-            ctx.font = fontSize + "px monospace";
-
-            for (let i = 0; i < drops.length; i++) {
-                const text = String.fromCharCode(0x30A0 + Math.random() * 96);
-                ctx.fillText(text, i * fontSize, drops[i] * fontSize);
-
-                if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
-                    drops[i] = 0;
-                }
-
-                drops[i]++;
+        let index = 0;
+        function typeLine() {
+            if (index < bootLines.length) {
+                document.getElementById("terminal").innerHTML += bootLines[index] + "\n";
+                index++;
+                setTimeout(typeLine, 500);
             }
         }
 
-        setInterval(drawMatrix, 50);
+        typeLine();
 
-        window.addEventListener("resize", () => {
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
+        document.addEventListener("keypress", (event) => {
+            if (event.key === "Enter") {
+                window.location.href = "https://your-next-page.com"; // Yönlendirme adresi buraya gelsin
+            }
         });
     </script>
 </body>
