--- a/code.html
+++ b/code.html
@@ -11,11 +11,14 @@
             font-family: monospace;
             font-size: 14px;
             padding: 20px;
+            overflow: hidden;
         }
         #terminal {
             white-space: pre-wrap;
-            overflow: hidden;
+            overflow-y: auto;
             height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
         .ascii-art {
             font-size: 18px;
@@ -39,6 +42,8 @@
     </div>
 
     <script>
+        const terminal = document.getElementById("terminal");
+
         const bootLines = [
             "[Initializing Treyarch Secure System...]",
             "[Checking Memory...] OK",
@@ -56,36 +61,37 @@
             "[Finalizing System Initialization...]",
             "----------------------------------------",
             "RANDOM SYSTEM LOGS:",
-            "USB Device Detected: VID_0E8F&PID_0022",
-            "Running Process: SecureDaemon.exe",
-            "Memory Page Fault at 0x0033FFAA",
-            "Network Packet Loss: 0.0001%",
-            "Encrypted Data Received: 2048 bits",
-            "GPU Acceleration: ENABLED",
-            "AI Model Training Progress: 92%",
-            "System Time: 03:27:54 UTC",
-            "Logfile Saved: /var/log/bootlog_032754.log",
-            "------------------------------",
-            "[Finalizing: Ready...]",
         ];
 
-        // Daha fazla rastgele sistem logu oluştur
-        for (let i = 0; i < 130; i++) {
+        // 300+ Rastgele satır oluştur
+        for (let i = 0; i < 300; i++) {
             let randomHex = Math.floor(Math.random() * 0xFFFFFF).toString(16).toUpperCase();
             let randomCode = `Process ${Math.floor(Math.random() * 9000) + 1000}: SYS_EVENT_${randomHex}`;
-            bootLines.splice(15, 0, randomCode); // Rastgele yerlere ekle
+            bootLines.splice(15, 0, randomCode);
         }
 
         let index = 0;
+        
         function typeLine() {
             if (index < bootLines.length) {
-                document.getElementById("terminal").innerHTML += bootLines[index] + "\n";
+                let line = document.createElement("div");
+                line.textContent = bootLines[index];
+                terminal.appendChild(line);
+                
+                // **Otomatik kaydırma**
+                terminal.scrollTop = terminal.scrollHeight;
+
+                // **Mantıklı satırlar yavaş, rastgele olanlar hızlı**
+                let delay = (bootLines[index].includes("[") || bootLines[index].includes(":")) 
+                    ? Math.random() * 500 + 300  // Mantıklı loglar 300ms - 800ms
+                    : Math.random() * 150 + 50;  // Rastgele loglar 50ms - 200ms
+
                 index++;
-                setTimeout(typeLine, Math.random() * 300 + 200); // Rastgele hızda yaz (200ms-500ms)
+                setTimeout(typeLine, delay);
             } else {
                 setTimeout(() => {
                     document.getElementById("ascii-art").style.display = "block";
-                    document.getElementById("terminal").innerHTML += "\nPress ENTER to continue...\n";
+                    terminal.innerHTML += "\nPress ENTER to continue...\n";
                 }, 500);
             }
         }
