--- a/code.html
+++ b/code.html
@@ -20,98 +20,116 @@
       height: 100vh;
       display: flex;
       flex-direction: column;
+      visibility: hidden;
     }
     .logo-container {
       position: absolute;
       top: 20px;
       left: 20px;
-      width: 100px;
     }
-    .logo-container svg {
-      width: 100%;
-      height: auto;
+    .logo-container img {
+      width: 250px;
+      display: block;
     }
   </style>
 </head>
 <body>
   <div class="logo-container">
-    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 652 652">
-      <g transform="matrix(1.638962, 0, 0, 1.638962, 123.475143, -200.204147)">
-        <path d="M206.2,352.2l3.6,6.2c6.1,8.3,12.7,24.5,2.5,39.2c0.8-1.2,4.9-8.4-0.3-22c0,0,2.6,27.4-29.4,19.3 
-        c-18.9-4.8-36.4-14.1-51-27.1l0.8-1.1l11.7,8.5c31.4,22.7,52.2,18.4,52.2,18.4c-27.3,0.2-52.2-20.2-52.2-20.2 
-        c-2.1-2.9-3.1-6.6-2.9-10.2l-3-4.9c0,0,9.4-14.5,12.9-22.1c0,0,28,8.3,33.3,28c0,0,6.2,21.2-28.2,6.3c0,0,63,32.9,48-4 
-        c0,0-12.7-25.7-50.1-37.9l0.3-0.8c7.3,2,14.2,5.1,20.6,9.2c40.5,25.5,32.5,42.7,32.5,42.7l0.6-0.4c6.1-20.8-32.9-43.1-32.9-43.1 
-        l-13.1-13c5.3,1.6,10.4,3.6,15.5,6l3.3,1.3c-9.4-6.2-22.2-9.8-24.2-10.3c2.3-9.9,3.7-20,4-30.1c1.6-42.4-15.7-61.8-37.9-62 
-        c-2,0-15.9-0.3-25.2,15.1l1.6-1.2c3.9-3.9,14-11.2,23.3-10.3l3.8,2.1c0,0-9.3-2.3-15,4.3c0,0,8.4-7.8,20.8-1.4l0.8,1 
-        c-1.6-0.9-3.2-1.6-5-2.1c-0.9-0.2-7.3-1.8-11.9,0.7l6.1,2.1c0.4,0,28,1.6,25.6,54.2c-0.7,14.3-4.8,39.8-20.3,59.4 
-        c-14.6,18.4-56.7,58.5-80.6,40.5c0,0-12-8.6,1.4-31.4c0,0-13.5,14.7-8.7,35.3c0,0-16-13.4,6.4-44.2c16.1-20.4,41.9-29.4,41.9-29.4 
-        l2.3,0.1l-8.2,10.8c-17.7,6.1-31.6,27.4-31.6,27.4c-18.1,34.3,10.3,32.5,10.3,32.5" style="fill: rgb(255, 255, 255);"/>
-      </g>
-    </svg>
+    <img src="https://raw.githubusercontent.com/kullanici_adin/repository/main/treyarch-logo.svg" alt="Treyarch Logo">
   </div>
-
   <div id="terminal"></div>
 
   <script>
     const terminal = document.getElementById("terminal");
 
-    const bootLines = [
-      "[Initializing Treyarch Secure System...]",
-      "[Checking Memory...] OK",
-      "[Loading Kernel Modules...]",
-      "[Connecting to Secure Network...]",
-      "[Validating Encryption Keys...]",
-      "[System Security Scan...] No Threats Detected",
-      "[Loading Custom AI Protocols...]",
-      "[Authenticating Users...]",
-      "[Booting Advanced Firewall...]",
-      "[Checking RAID Configuration...]",
-      "[Loading Secure Storage Modules...]",
-      "[Scanning External Connections...]",
-      "[Loading UI Components...]",
-      "[Finalizing System Initialization...]",
-      "----------------------------------------",
-      "RANDOM SYSTEM LOGS:"
-    ];
-
-    for (let i = 0; i < 300; i++) {
-      let randomHex = Math.floor(Math.random() * 0xFFFFFF).toString(16).toUpperCase();
-      let randomCode = `Process ${Math.floor(Math.random() * 9000) + 1000}: SYS_EVENT_${randomHex}`;
-      bootLines.splice(15, 0, randomCode);
-    }
-
-    let index = 0;
-    function typeLine() {
-      if (index < bootLines.length) {
-        const lineElem = document.createElement("div");
-        lineElem.textContent = bootLines[index];
-        terminal.appendChild(lineElem);
-        terminal.scrollTop = terminal.scrollHeight;
-
-        let delay;
-        if (bootLines[index].startsWith("Process") && bootLines[index].includes("SYS_EVENT")) {
-          delay = Math.random() * 20 + 15; 
-        } else if (bootLines[index].includes("[")) {
-          delay = Math.random() * 300 + 200; 
-        } else {
-          delay = Math.random() * 100 + 30; 
-        }
-
-        index++;
-        setTimeout(typeLine, delay);
-      } else {
-        setTimeout(() => {
-          const endLine = document.createElement("div");
-          endLine.textContent = "\nPress ENTER to continue...\n";
-          terminal.appendChild(endLine);
-          terminal.scrollTop = terminal.scrollHeight;
-        }, 500);
-      }
-    }
-
+    // 1.5-2 saniye bekleme süresi
     setTimeout(() => {
+      terminal.style.visibility = "visible";
+      startBootLogs();
+    }, Math.random() * 500 + 1500); // 1500-2000ms arasında rastgele başlar
+
+    function startBootLogs() {
+      const bootLines = [
+        "[System Boot Initiated...]",
+        "[Memory Diagnostic...] PASSED",
+        "[Loading Secure Kernel...]",
+        "[Checking System Integrity...] SUCCESS",
+        "[Network Interface Status...] ONLINE",
+        "[Validating Cryptographic Modules...] OK",
+        "[Loading Advanced AI Modules...]",
+        "[Initializing Firewall v5.2...]",
+        "[Checking Disk Array Health...] ALL SECTORS OK",
+        "[Activating Quantum Encryption Layer...] ACTIVE",
+        "[Establishing Secure Communication Channels...]",
+        "[Scanning for External Intrusions...] 0 THREATS DETECTED",
+        "[Finalizing System Initialization...]",
+        "----------------------------------------",
+        "SYSTEM LOGS:"
+      ];
+
+      const randomLogs = [
+        "Task Scheduler: Next execution cycle in 120ms",
+        "Daemon Service: Refreshing security token...",
+        "Kernel Panic: FALSE ALARM, Auto-recovery successful",
+        "Packet Analyzer: Unusual traffic detected from 192.168.1.254",
+        "Process 7234: SYSTEM_CHECKPOINT_REACHED",
+        "Cache Manager: Purging outdated sessions...",
+        "Firewall Alert: Unauthorized access attempt blocked",
+        "Security Daemon: New fingerprint profile registered",
+        "AI Monitor: Predictive analytics module recalibrated",
+        "Database Sync: Cluster nodes synchronized (latency: 3ms)",
+        "Power Management: Switching to high-efficiency mode",
+        "Quantum Processing Unit: Cycle refresh completed",
+        "Root Access Attempt: DENIED (3 failed attempts)",
+        "System Task: Executing scheduled maintenance",
+        "Encrypted Channel: Handshake verified",
+        "Neural Network: Optimizing response time...",
+        "Auth System: Biometric scan complete",
+        "I/O Manager: Disk read/write speeds optimized",
+        "Remote Connection: Secure tunnel established",
+        "Threat Detection: Running deep scan...",
+        "Core Services: Restart required in 48 hours",
+        "Error Handler: Non-critical exception logged"
+      ];
+
+      // Rastgele 300 log ekle
+      for (let i = 0; i < 300; i++) {
+        let randomLog = `Process ${Math.floor(Math.random() * 9000) + 1000}: ${randomLogs[Math.floor(Math.random() * randomLogs.length)]}`;
+        bootLines.splice(15, 0, randomLog);
+      }
+
+      let index = 0;
+      function typeLine() {
+        if (index < bootLines.length) {
+          const lineElem = document.createElement("div");
+          lineElem.textContent = bootLines[index];
+          terminal.appendChild(lineElem);
+          terminal.scrollTop = terminal.scrollHeight;
+
+          // Log geçiş hızını belirleme (hızlandırıldı)
+          let delay;
+          if (bootLines[index].startsWith("Process")) {
+            delay = Math.random() * 30 + 10; // 10ms-40ms
+          } else if (bootLines[index].includes("[")) {
+            delay = Math.random() * 120 + 80; // 80ms-200ms
+          } else {
+            delay = Math.random() * 80 + 20; // 20ms-100ms
+          }
+
+          index++;
+          setTimeout(typeLine, delay);
+        } else {
+          setTimeout(() => {
+            const endLine = document.createElement("div");
+            endLine.textContent = "\nPress ENTER to continue...\n";
+            terminal.appendChild(endLine);
+            terminal.scrollTop = terminal.scrollHeight;
+          }, 200);
+        }
+      }
+
       typeLine();
-    }, 1500); // Logo 1.5 saniye boyunca görünecek
+    }
 
     document.addEventListener("keypress", (event) => {
       if (event.key === "Enter") {
