--- a/code.html
+++ b/code.html
@@ -11,46 +11,39 @@
       font-family: monospace;
       font-size: 14px;
       margin: 0;
+      padding: 10px;
       overflow: hidden;
-      padding-top: 100px; /* Terminal üst boşluğu, logoların altında başlaması için */
     }
-    #terminal {
-      white-space: pre-wrap;
-      overflow-y: auto;
-      height: calc(100vh - 100px);
-      display: flex;
-      flex-direction: column;
-      padding: 20px;
-    }
+    /* Logo sabit konumda, üst boşluk azaltıldı */
     .logo-container {
       position: fixed;
-      top: 20px;
+      top: 5px;
       left: 20px;
       width: 350px;
       z-index: 1000;
     }
-    .logo-container svg {
+    .logo-container img {
       width: 100%;
       height: auto;
-      /* Logonun keskin görünmesi için antialiasing kapatılabilir, tarayıcıya bağlı */
+      display: block;
+    }
+    /* Terminal, logoların altına başlayacak şekilde ayarlandı */
+    #terminal {
+      white-space: pre-wrap;
+      overflow-y: auto;
+      height: calc(100vh - 80px);
+      display: flex;
+      flex-direction: column;
+      margin-top: 80px;
+      padding: 10px;
     }
   </style>
 </head>
 <body>
-  <!-- Logo Bölgesi: Sabit ve sol üstte -->
+  <!-- Logo Bölgesi: GitHub'daki SVG dosyası -->
   <div class="logo-container">
-    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 652 652">
-      <g transform="matrix(1.8, 0, 0, 1.8, 100, -150)">
-        <!-- Aşağıdaki path verisini orijinal SVG'nizden alınız. (Path verisi kısaltılmış) -->
-        <path d="M206.2,352.2l3.6,6.2c6.1,8.3,12.7,24.5,2.5,39.2c0.8-1.2,4.9-8.4-0.3-22c0,0,2.6,27.4-29.4,19.3 
-          c-18.9-4.8-36.4-14.1-51-27.1l0.8-1.1l11.7,8.5c31.4,22.7,52.2,18.4,52.2,18.4c-27.3,0.2-52.2-20.2-52.2-20.2 
-          c-2.1-2.9-3.1-6.6-2.9-10.2l-3-4.9c0,0,9.4-14.5,12.9-22.1c0,0,28,8.3,33.3,28c0,0,6.2,21.2-28.2,6.3c0,0,63,32.9,48-4 
-          c0,0-12.7-25.7-50.1-37.9l0.3-0.8c7.3,2,14.2,5.1,20.6,9.2c40.5,25.5,32.5,42.7,32.5,42.7l0.6-0.4c6.1-20.8-32.9-43.1-32.9-43.1 
-          l-13.1-13c5.3,1.6,10.4,3.6,15.5,6l3.3,1.3c-9.4-6.2-22.2-9.8-24.2-10.3c2.3-9.9,3.7-20,4-30.1c1.6-42.4-15.7-61.8-37.9-62" fill="white"/>
-      </g>
-    </svg>
+    <img src="https://raw.githubusercontent.com/easyax/test/main/Untitled%20(2).svg" alt="Treyarch Logo">
   </div>
-
   <!-- Terminal Bölgesi -->
   <div id="terminal"></div>
 
@@ -72,7 +65,7 @@
       "SYSTEM LOGS:"
     ];
 
-    // Rastgele sistem logları (hızlandırılmış)
+    // Rastgele sistem logları
     const randomLogs = [
       "Task Scheduler: Cycle in 120ms",
       "Daemon: Refreshing token...",
@@ -83,21 +76,20 @@
       "Auth: Biometric scan complete"
     ];
 
-    // Ekstra Treyarch güvenlik logları (İngilizce)
-    const treyarchLogs = [
-      "[TREYARCH SECURITY] AI intrusion detection active",
-      "[TREYARCH SECURITY] Real-time threat analytics online",
-      "[TREYARCH SECURITY] End-to-end encryption verified",
-      "[TREYARCH SECURITY] Firewall integrity: Optimal",
-      "[TREYARCH SECURITY] Secure channels established"
-    ];
-
     // 150 adet rastgele log ekle
     for (let i = 0; i < 150; i++) {
       let randomLog = `Process ${Math.floor(Math.random() * 9000) + 1000}: ${randomLogs[Math.floor(Math.random() * randomLogs.length)]}`;
       bootLines.splice(9, 0, randomLog);
     }
-    // En sona Treyarch loglarını ekle
+
+    // Ek Treyarch güvenlik logları (İngilizce)
+    const treyarchLogs = [
+      "[TREYARCH SECURITY] AI-based intrusion detection activated",
+      "[TREYARCH SECURITY] Real-time threat analytics online",
+      "[TREYARCH SECURITY] End-to-end encryption verified",
+      "[TREYARCH SECURITY] Firewall integrity: Optimal",
+      "[TREYARCH SECURITY] Secure channels established"
+    ];
     bootLines.push(...treyarchLogs);
 
     let index = 0;
@@ -108,20 +100,19 @@
         terminal.appendChild(lineElem);
         terminal.scrollTop = terminal.scrollHeight;
         
+        // Rastgele loglar için daha yüksek hız (%80 hızlandırılmış)
         let delay;
-        // Eğer satır rastgele log ise (başında "Process")
         if (bootLines[index].startsWith("Process")) {
-          delay = Math.random() * 10 + 5; // 5ms - 15ms arası (daha hızlı)
+          delay = Math.random() * 10 + 5; // 5ms - 15ms
         } else if (bootLines[index].includes("[")) {
-          delay = Math.random() * 40 + 20; // 20ms - 60ms arası
+          delay = Math.random() * 30 + 20; // 20ms - 50ms
         } else {
-          delay = Math.random() * 20 + 10; // 10ms - 30ms arası
+          delay = Math.random() * 20 + 10; // 10ms - 30ms
         }
         
         index++;
         setTimeout(typeLine, delay);
       } else {
-        // Tüm loglar tamamlandığında son mesaj
         setTimeout(() => {
           const endLine = document.createElement("div");
           endLine.textContent = "\nPress ENTER to continue...\n";
@@ -131,10 +122,10 @@
       }
     }
 
-    // Boot logları başlamadan önce 1.5-2 saniye logo gösterimi (terminal görünürlüğü gizli, logo fixed olarak kalıyor)
+    // Başlangıçta 1.5-2 saniye logo gösterimi için bekleme
     setTimeout(() => {
       typeLine();
-    }, Math.random() * 500 + 1500); // 1500ms - 2000ms bekle
+    }, Math.random() * 500 + 1500);
 
     document.addEventListener("keypress", (event) => {
       if (event.key === "Enter") {
