--- a/code.html
+++ b/code.html
@@ -17,9 +17,9 @@
     /* Logo animasyonu eklenmiş ve konumlandırılmış */
     .logo-container {
       position: fixed;
-      top: 60px;
+      top: 160px;
       left: 25px;
-      width: 350px;
+      width: 300px;
       z-index: 1000;
       animation: electricShock 1s ease-in-out forwards;
     }
@@ -116,14 +116,45 @@
     }
 
     // Ek Treyarch güvenlik logları (İngilizce)
-    const treyarchLogs = [
-      "[TREYARCH SECURITY] AI-based intrusion detection activated",
-      "[TREYARCH SECURITY] Real-time threat analytics online",
-      "[TREYARCH SECURITY] End-to-end encryption verified",
-      "[TREYARCH SECURITY] Firewall integrity: Optimal",
-      "[TREYARCH SECURITY] Secure channels established"
-    ];
-    bootLines.push(...treyarchLogs);
+   const treyarchLogs = [
+  "[TREYARCH SECURITY] AI-based intrusion detection activated",
+  "[TREYARCH SECURITY] Real-time threat analytics online",
+  "[TREYARCH SECURITY] End-to-end encryption verified",
+  "[TREYARCH SECURITY] Firewall integrity: Optimal",
+  "[TREYARCH SECURITY] Secure channels established",
+  "[TREYARCH SECURITY] Biometric authentication system initialized",
+  "[TREYARCH SECURITY] Quantum encryption protocols engaged",
+  "[TREYARCH SECURITY] Multi-layer anomaly detection active",
+  "[TREYARCH SECURITY] Zero-trust architecture verification complete",
+  "[TREYARCH SECURITY] Advanced penetration testing successful",
+  "[TREYARCH SECURITY] Cyber threat intelligence system synchronized",
+  "[TREYARCH SECURITY] AI-assisted forensic analysis initiated",
+  "[TREYARCH SECURITY] Secure blockchain ledger integrity verified",
+  "[TREYARCH SECURITY] 256-bit encryption tunnel stabilized",
+  "[TREYARCH SECURITY] Global security node synchronization complete",
+  "[TREYARCH SECURITY] Security audit logs stored in immutable archive",
+  "[TREYARCH SECURITY] Encrypted data vaults secured",
+  "[TREYARCH SECURITY] Security patch level: Up-to-date",
+  "[TREYARCH SECURITY] Secure cloud federation network linked",
+  "[TREYARCH SECURITY] AI-powered risk assessment running in real-time",
+  "[TREYARCH SECURITY] Adaptive firewall response engaged",
+  "[TREYARCH SECURITY] Intrusion Prevention System (IPS) armed",
+  "[TREYARCH SECURITY] Deep learning security model updated",
+  "[TREYARCH SECURITY] Secure boot validation completed",
+  "[TREYARCH SECURITY] Data leakage prevention module active",
+  "[TREYARCH SECURITY] Critical infrastructure protection enabled",
+  "[TREYARCH SECURITY] Decentralized security governance framework applied",
+  "[TREYARCH SECURITY] Anonymized telemetry data processing started",
+  "[TREYARCH SECURITY] Automated cyber response unit deployed",
+  "[TREYARCH SECURITY] Behavioral anomaly detection in operation",
+  "[TREYARCH SECURITY] Enhanced identity verification algorithms running",
+  "[TREYARCH SECURITY] Secure satellite uplink connection verified",
+  "[TREYARCH SECURITY] Post-quantum cryptographic defense enabled",
+  "[TREYARCH SECURITY] System-wide security posture: MAXIMUM DEFENSE"
+];
+
+bootLines.push(...treyarchLogs);
+
 
     let index = 0;
     function typeLine() {
