--- a/code.html
+++ b/code.html
@@ -154,6 +154,7 @@
 ];
 
 bootLines.push(...treyarchLogs);
+    <img id="secondLogo" src="https://raw.githubusercontent.com/easyax/test/main/Untitled%20(3).svg" class="hidden-logo">
 
 
     let index = 0;
